Fix firefox overflow issue

--- a/public/sass/_common.scss
+++ b/public/sass/_common.scss
@@ -95,6 +95,7 @@ img {
   &.in-content {
     min-width: 300px;
     max-width: 50%;
+    width: 100%;
     float: left;
     margin: 0 1em 0 0;
 
