--- a/public/sass/_custom_styles.scss
+++ b/public/sass/_custom_styles.scss
@@ -163,6 +163,7 @@ header {
 
   img {
     @include rounded-bottom-shadow;
+    width: 100%;
   }
 }
 
